[gd_scene load_steps=4 format=3 uid="uid://cnpc8kailloux3"]

[ext_resource type="Script" path="res://scenes/npcs/kaillou_npc.gd" id="1_npc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_collision"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 64.0

[node name="KaillouNPC" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_npc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_collision")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="EmoteLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -20.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
